[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "memeooorr"
version = "0.1.0"
description = ""
requires-python = "<3.15,>=3.10"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    # OA / open-aea / plugins — pinned exactly (framework contract).
    "open-autonomy[cli]==0.21.19",
    "open-aea==2.2.1",
    "open-aea-ledger-ethereum==2.2.1",
    "open-aea-ledger-cosmos==2.2.1",
    "open-aea-helpers==0.21.19",
    # Agent / app — exact pins per @DavidMinarsch's #436 rule (no silent
    # supply chain). Bounded ranges have a strict upper bound on every entry.
    "peewee==3.17.5",
    "twitter-text-parser==3.0.0",
    "grpcio==1.78.0",
    "twikit==2.3.2",
    "py-ecc==8.0.0",
    "openapi-core==0.22.0",
    "google-generativeai==0.8.2",
    "tweepy==4.15.0",
    "pyinstaller==6.19.0",
    "js2py==0.74",
    "openai==1.62.0",
    "rich==14.0.0",
    "safe-eth-py==7.19.0",
    "textblob<0.20,>=0.19.0",
    "w3multicall<0.4,>=0.3.1",
    "filelock<4,>=3.20.1",
    # Bounded ranges that satisfy upstream third-party YAML constraints.
    "typing_extensions<=4.15.0,>=3.10.0.2",
    "asn1crypto<1.5.0,>=1.4.0",
    "requests<2.33.0,>=2.28.1",
    "eth-account<0.14.0,>=0.13.0",
    "openapi-spec-validator<0.8.0,>=0.7.0",
    "jsonschema<5.0.0,>=4.23.0",
    "pydantic<3,>=2.11.9",
    "web3<8,>=7.0.0",
    "httpx<0.28,>=0.23",
    "setuptools<=81.0.0",
]

[project.urls]
Repository = "https://github.com/valory-xyz/meme-ooorr"

[dependency-groups]
dev = [
    "tomte[cli, tests] @ git+https://github.com/valory-xyz/tomte.git@92cb14f4696bf3eba3ceec36e1a915961d5c7992",
]

[tool.uv]
default-groups = "all"
prerelease = "allow"

[tool.tomte]
# Service is published under dvilela/, agent under valory/. Pin
# packages_paths to the primary first-party author.
packages_paths = "packages/valory"
# Third-party packages on disk are synced from these upstream repos
# (open-autonomy/open-aea pins auto-derived from pyproject).
upstream_pins = [
    "valory-xyz/mech-interact@v0.28.0",
    "valory-xyz/genai@v6.1.0",
    "valory-xyz/kv-store@v0.4.0",
    "valory-xyz/funds-manager@v2.3.0",
]
# UI bundle JS (Vite hash-suffixed agentsfun-ui-build/assets/*) trip
# generic-api-key on every rebuild. Plus a constant-name string in
# behaviour_classes/twitter.py (`pending_tweets_for_tw_mech` collection
# key) trips the same rule — public field name, not a credential.
gitleaks_extra_paths = [
    "packages/dvilela/skills/memeooorr_abci/agentsfun-ui.*",
    "packages/dvilela/skills/memeooorr_abci/behaviour_classes/.*",
]
# `aea-helpers check-dependencies` does string-strict matching across
# all package YAMLs and tox.ini. These specifiers diverge between
# first-party skill.yaml declarations and upstream third-party YAMLs
# (e.g. mirror_db has aiohttp `>=3.7.4` while http_client has
# `<4.0.0,>=3.8.5`). All variants are runtime-compatible so excluding
# them keeps the check honest without imposing churn on upstream YAMLs.
check_dependencies_extra_excludes = [
    "aiohttp",
    "open-aea-ledger-ethereum",
    "pytest-asyncio",
    "typing-extensions",
    "hexbytes",
    "py-eth-sig-utils",
    "twitter_text_parser",
    "twitter-text-parser",
    "ipfshttpclient",
    "open-aea-test-autonomy",
    "open-aea-cli-ipfs",
    "ecdsa",
    "certifi",
    "multidict",
    "eth_typing",
    "eth-abi",
    "eth-utils",
    "packaging",
    "pycryptodome",
    "py-multicodec",
    "py-multibase",
    "httpx",
    "werkzeug",
    "attrs",
    "protobuf",
    "hypothesis",
    "pytest",
]
tomte_dep_pin = " @ git+https://github.com/valory-xyz/tomte.git@92cb14f4696bf3eba3ceec36e1a915961d5c7992"

[tool.uv.build-backend]
module-name = ["packages"]
module-root = ""
