[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "memeooorr"
version = "0.1.0"
description = ""
requires-python = "<3.15,>=3.10"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "open-autonomy[cli]==0.21.26",
    "open-aea==2.2.9",
    "open-aea-ledger-ethereum==2.2.9",
    "open-aea-ledger-cosmos==2.2.9",
    "open-aea-helpers==0.21.26",
    "peewee==3.17.5",
    "twitter-text-parser==3.0.0",
    "grpcio==1.78.0",
    "twikit==2.3.2",
    "py-ecc==8.0.0",
    "openapi-core==0.22.0",
    "google-generativeai==0.8.2",
    "tweepy==4.15.0",
    "pyinstaller==6.19.0",
    "js2py==0.74",
    "openai==1.62.0",
    "rich==14.0.0",
    "safe-eth-py==7.19.0",
    "textblob<0.20,>=0.19.0",
    "w3multicall<0.4,>=0.3.1",
    "filelock<4,>=3.20.1",
    "typing_extensions<=4.15.0,>=3.10.0.2",
    "asn1crypto<1.5.0,>=1.4.0",
    "requests<2.33.0,>=2.28.1",
    "eth-account<0.14.0,>=0.13.0",
    "openapi-spec-validator<0.8.0,>=0.7.0",
    "jsonschema<5.0.0,>=4.23.0",
    "pydantic<3,>=2.11.9",
    "web3<8,>=7.0.0",
    "httpx<0.28,>=0.23",
    "setuptools<=81.0.0",
    "cffi<2.1.0",
]

[project.urls]
Repository = "https://github.com/valory-xyz/meme-ooorr"

[dependency-groups]
dev = [
    "tomte[cli, tests] @ git+https://github.com/valory-xyz/tomte.git@v0.7.0",
]

[tool.uv]
default-groups = "all"
prerelease = "allow"
# cffi 2.1.0 (transitive via cryptography << open-aea-ledger-solana)
# reports its license as MIT-0, which tomte's PARANOID liccheck rejects.
# Constrain to the previous minor until the tomte allowlist covers MIT-0.
override-dependencies = ["cffi<2.1"]

[tool.tomte]
packages_paths = "packages/valory"
upstream_pins = [
    "valory-xyz/mech-interact@v0.32.5",
    "valory-xyz/genai@v7.2.2",
    "valory-xyz/kv-store@v0.7.1",
    "valory-xyz/funds-manager@v3.1.2",
]
gitleaks_extra_paths = [
    "packages/valory/skills/memeooorr_abci/agentsfun-ui-build/.*",
    "packages/valory/skills/memeooorr_abci/behaviour_classes/.*",
]
check_dependencies_extra_excludes = [
    "aiohttp",
    "open-aea-ledger-ethereum",
    "pytest-asyncio",
    "typing-extensions",
    "hexbytes",
    "py-eth-sig-utils",
    "twitter_text_parser",
    "twitter-text-parser",
    "ipfshttpclient",
    "open-aea-test-autonomy",
    "open-aea-cli-ipfs",
    "ecdsa",
    "certifi",
    "multidict",
    "eth_typing",
    "eth-abi",
    "eth-utils",
    "packaging",
    "pycryptodome",
    "py-multicodec",
    "py-multibase",
    "httpx",
    "werkzeug",
    "attrs",
    "protobuf",
    "hypothesis",
    "pytest",
]
# Suffix concatenated to `tomte` everywhere tomte is referenced (extras
# install lines, render-mypy-config installs, etc). The leading space is
# load-bearing — the renderer joins this onto the bare package name.
tomte_dep_pin = " @ git+https://github.com/valory-xyz/tomte.git@v0.7.0"

[tool.uv.build-backend]
module-name = ["packages"]
module-root = ""
